--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,20 @@
 {
-    "name": "Aplikasi Prakiraan Cuaca BMKG",
-    "short_name": "Cuaca BMKG",
-    "description": "Aplikasi untuk melihat prakiraan cuaca di Indonesia dari data resmi BMKG.",
-    "start_url": "/index.html",
-    "display": "standalone",
-    "background_color": "#f4f7fc",
-    "theme_color": "#1e90ff",
-    "orientation": "portrait-primary",
-    "icons": [
-        {
-            "src": "https://placehold.co/192x192/1e90ff/FFFFFF?text=Cuaca",
-            "type": "image/png",
-            "sizes": "192x192",
-            "purpose": "any maskable"
-        },
-        {
-            "src": "https://placehold.co/512x512/1e90ff/FFFFFF?text=Cuaca",
-            "type": "image/png",
-            "sizes": "512x512"
-        }
-    ]
+  "name": "Cuaca Indonesia",
+  "short_name": "Cuaca",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#1e90ff",
+  "theme_color": "#1e90ff",
+  "icons": [
+    {
+      "src": "https://placehold.co/192x192/1e90ff/fff?text=Cuaca",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "https://placehold.co/512x512/1e90ff/fff?text=Cuaca",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
